--- a/FlickrApp/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/FlickrApp/en.lproj/MainStoryboard_iPhone.storyboard
@@ -1,11 +1,69 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="1.1" toolsVersion="2182" systemVersion="11D50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="1.1" toolsVersion="2182" systemVersion="11D50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="Ilu-iD-NUF">
     <dependencies>
         <deployment defaultVersion="1296" identifier="iOS"/>
         <development defaultVersion="4200" identifier="xcode"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1181"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--Recents Table View Controller - Item 2-->
+        <scene sceneID="0Ot-0D-63N">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0In-hd-FLX" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="JBe-rh-88f" customClass="RecentsTableViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="niL-dV-SZc" customClass="UITableView">
+                        <rect key="frame" x="0.0" y="20" width="320" height="411"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item 2" id="kKX-6K-5dT"/>
+                </viewController>
+            </objects>
+            <point key="canvasLocation" x="1" y="454"/>
+        </scene>
+        <!--Top Places Table View Controller - Item 1-->
+        <scene sceneID="sw1-BJ-31x">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1Uv-CD-rEr" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="E3d-Nb-aSG" customClass="TopPlacesTableViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="OEp-zf-iJz" customClass="UITableView">
+                        <rect key="frame" x="0.0" y="20" width="320" height="411"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item 1" id="pcL-y6-BVG"/>
+                </viewController>
+            </objects>
+            <point key="canvasLocation" x="1" y="-110"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="v8L-Gu-ltr">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="QMi-va-7Wz" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tabBarController definesPresentationContext="YES" id="Ilu-iD-NUF" sceneMemberID="viewController">
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="v3j-aP-R2S">
+                        <rect key="frame" x="129" y="330" width="163" height="49"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="E3d-Nb-aSG" kind="relationship" relationship="viewControllers" id="WiP-vp-mqf"/>
+                        <segue destination="JBe-rh-88f" kind="relationship" relationship="viewControllers" id="BLy-Sy-4ts"/>
+                    </connections>
+                </tabBarController>
+            </objects>
+            <point key="canvasLocation" x="-533" y="172"/>
+        </scene>
+    </scenes>
+    <classes>
+        <class className="RecentsTableViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/RecentsTableViewController.h"/>
+        </class>
+        <class className="TopPlacesTableViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/TopPlacesTableViewController.h"/>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
