--- a/FlickrApp/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/FlickrApp/en.lproj/MainStoryboard_iPhone.storyboard
@@ -84,11 +84,11 @@
                         <rect key="frame" x="0.0" y="64" width="320" height="367"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="redraw" minimumZoomScale="0.02" maximumZoomScale="5" id="inc-a7-BMP">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" minimumZoomScale="0.02" maximumZoomScale="5" id="inc-a7-BMP">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="367"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" id="FeD-cl-UWc">
+                                    <imageView userInteractionEnabled="NO" contentMode="TopLeft" id="FeD-cl-UWc">
                                         <rect key="frame" x="0.0" y="0.0" width="320" height="367"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     </imageView>
@@ -97,18 +97,7 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" id="Zgq-CA-LeR">
-                        <barButtonItem key="leftBarButtonItem" title="+" id="qql-Dy-dHY">
-                            <connections>
-                                <action selector="plus:" destination="dKe-Wy-6G4" id="nyU-yD-BIr"/>
-                            </connections>
-                        </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" title="-" id="CGw-5V-Hjd">
-                            <connections>
-                                <action selector="minus:" destination="dKe-Wy-6G4" id="fnG-K3-TNj"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
+                    <navigationItem key="navigationItem" id="Zgq-CA-LeR"/>
                     <connections>
                         <outlet property="imageView" destination="FeD-cl-UWc" id="puz-f0-aK8"/>
                         <outlet property="scrollView" destination="inc-a7-BMP" id="NwM-XQ-1oV"/>
