--- a/FlickrApp/en.lproj/MainStoryboard_iPad.storyboard
+++ b/FlickrApp/en.lproj/MainStoryboard_iPad.storyboard
@@ -142,42 +142,6 @@
             </objects>
             <point key="canvasLocation" x="770" y="-868"/>
         </scene>
-        <!--Flickr Image View Controller-->
-        <scene sceneID="MDa-kJ-vEI">
-            <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="XtB-62-Ane" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <viewController id="Z0g-kr-Y9Y" customClass="FlickrImageViewController" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="wtJ-Rq-BUo">
-                        <rect key="frame" x="0.0" y="20" width="768" height="1004"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" minimumZoomScale="0.10000000000000001" maximumZoomScale="10" id="wda-pw-QAI">
-                                <rect key="frame" x="0.0" y="44" width="768" height="960"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" id="VqR-Pf-bP3">
-                                        <rect key="frame" x="0.0" y="0.0" width="768" height="960"/>
-                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                    </imageView>
-                                </subviews>
-                            </scrollView>
-                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="2WZ-Uj-Y1i">
-                                <rect key="frame" x="0.0" y="0.0" width="768" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                                <items/>
-                            </toolbar>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    </view>
-                    <connections>
-                        <outlet property="imageView" destination="VqR-Pf-bP3" id="DWa-eV-ISl"/>
-                        <outlet property="scrollView" destination="wda-pw-QAI" id="k52-mf-i0Z"/>
-                        <outlet property="view" destination="VqR-Pf-bP3" id="ky9-1T-WTZ"/>
-                    </connections>
-                </viewController>
-            </objects>
-            <point key="canvasLocation" x="-537" y="93"/>
-        </scene>
         <!--Navigation Controller-->
         <scene sceneID="4kY-Jd-BMY">
             <objects>
@@ -216,15 +180,95 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qJk-Hi-LqT" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <splitViewController id="dKw-Ms-R9j" sceneMemberID="viewController">
                     <toolbarItems/>
+                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="blackTranslucent"/>
                     <connections>
                         <segue destination="NdB-av-I7Y" kind="relationship" relationship="masterViewController" id="Hg2-ZN-QQ0"/>
-                        <segue destination="Z0g-kr-Y9Y" kind="relationship" relationship="detailViewController" id="fGC-te-rGj"/>
+                        <segue destination="qvM-Dl-5DT" kind="relationship" relationship="detailViewController" id="Ta1-yX-DxD"/>
                     </connections>
                 </splitViewController>
             </objects>
             <point key="canvasLocation" x="-1509" y="-808"/>
         </scene>
+        <!--Flickr Image View Controller-->
+        <scene sceneID="6pK-rx-X0v">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Tai-2c-zow" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="qvM-Dl-5DT" customClass="FlickrImageViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="1f1-iu-0VO">
+                        <rect key="frame" x="0.0" y="20" width="768" height="1004"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" hidesWhenStopped="YES" style="gray" id="qPi-h8-QI5">
+                                <rect key="frame" x="374" y="492" width="20" height="20"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+                            </activityIndicatorView>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" minimumZoomScale="0.10000000149011612" maximumZoomScale="10" id="VmA-Ed-uEt">
+                                <rect key="frame" x="0.0" y="44" width="768" height="960"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" id="zW0-uO-O9g">
+                                        <rect key="frame" x="0.0" y="0.0" width="768" height="960"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    </imageView>
+                                </subviews>
+                            </scrollView>
+                            <toolbar clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="08g-uZ-3L3">
+                                <rect key="frame" x="0.0" y="0.0" width="768" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items/>
+                            </toolbar>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" id="ynt-Bx-GwF">
+                                <rect key="frame" x="20" y="11" width="728" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <value key="contentSizeForViewInPopover" type="size" width="600" height="600"/>
+                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="blackTranslucent"/>
+                    <connections>
+                        <outlet property="imageView" destination="zW0-uO-O9g" id="qUv-ar-LY3"/>
+                        <outlet property="scrollView" destination="VmA-Ed-uEt" id="46e-fY-jEZ"/>
+                        <outlet property="spinner" destination="qPi-h8-QI5" id="LLI-Bv-r2l"/>
+                        <outlet property="toolBarTitle" destination="ynt-Bx-GwF" id="yfk-uk-sr5"/>
+                        <outlet property="toolbar" destination="08g-uZ-3L3" id="aKK-Vl-lFn"/>
+                    </connections>
+                </viewController>
+            </objects>
+            <point key="canvasLocation" x="-508" y="-93"/>
+        </scene>
     </scenes>
+    <classes>
+        <class className="FlickrImageViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/FlickrImageViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="imageView" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="scrollView" candidateClass="UIScrollView"/>
+                <relationship kind="outlet" name="spinner" candidateClass="UIActivityIndicatorView"/>
+                <relationship kind="outlet" name="toolBarTitle" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="toolbar" candidateClass="UIToolbar"/>
+            </relationships>
+        </class>
+        <class className="PhotoListTableController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/PhotoListTableController.h"/>
+            <relationships>
+                <relationship kind="action" name="refresh:"/>
+                <relationship kind="outlet" name="refreshButton" candidateClass="UIBarButtonItem"/>
+            </relationships>
+        </class>
+        <class className="PhotosFromLocationTableViewController" superclassName="PhotoListTableController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/PhotosFromLocationTableViewController.h"/>
+        </class>
+        <class className="RecentPhotosTableViewController" superclassName="PhotoListTableController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/RecentPhotosTableViewController.h"/>
+        </class>
+        <class className="TopPlacesTableViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/TopPlacesTableViewController.h"/>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar" statusBarStyle="blackTranslucent"/>
         <simulatedOrientationMetrics key="orientation"/>
