--- a/FlickrApp/en.lproj/MainStoryboard_iPad.storyboard
+++ b/FlickrApp/en.lproj/MainStoryboard_iPad.storyboard
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="1.1" toolsVersion="2182" systemVersion="11D50" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" initialViewController="dKw-Ms-R9j">
     <dependencies>
-        <deployment defaultVersion="1296" identifier="iOS"/>
         <development defaultVersion="4200" identifier="xcode"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1181"/>
     </dependencies>
@@ -32,7 +31,7 @@
                 <tableViewController id="jnE-0O-dVj" customClass="TopPlacesTableViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="uZc-0f-HkP">
                         <rect key="frame" x="0.0" y="64" width="320" height="739"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" heightSizable="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Top Places Cell Identifier" textLabel="8KU-RN-8O0" detailTextLabel="RHL-e1-pHi" style="IBUITableViewCellStyleSubtitle" id="S3S-RY-AWe">
@@ -62,7 +61,13 @@
                             </tableViewCell>
                         </prototypes>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="cfe-qw-jMe"/>
+                    <navigationItem key="navigationItem" title="Root View Controller" id="cfe-qw-jMe">
+                        <barButtonItem key="rightBarButtonItem" systemItem="refresh" id="hmM-5H-7T6">
+                            <connections>
+                                <action selector="refresh:" destination="jnE-0O-dVj" id="Zdw-f2-SbU"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <segue destination="5Gi-cV-eyt" kind="push" identifier="Get Recent Photos for Location" id="toU-8M-3rL"/>
                     </connections>
@@ -76,8 +81,8 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dGL-GC-Jjf" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <tableViewController id="5Gi-cV-eyt" customClass="PhotosFromLocationTableViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="Oen-0O-ayY">
-                        <rect key="frame" x="0.0" y="64" width="320" height="739"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="744"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" heightSizable="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Photo Cell Identifier" id="HuT-Dz-fhi">
@@ -95,7 +100,15 @@
                             <outlet property="delegate" destination="5Gi-cV-eyt" id="iMo-YW-dkX"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="hRr-1x-hT9"/>
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" id="hRr-1x-hT9">
+                        <barButtonItem key="rightBarButtonItem" systemItem="refresh" id="5Lj-ia-UXF">
+                            <connections>
+                                <action selector="refresh:" destination="5Gi-cV-eyt" id="pdo-pH-EsK"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                 </tableViewController>
             </objects>
             <point key="canvasLocation" x="1242" y="-1858"/>
@@ -106,7 +119,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uSp-xJ-FNm" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <tableViewController id="GCX-qx-u4S" customClass="RecentPhotosTableViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="dS2-Tu-HkY">
-                        <rect key="frame" x="0.0" y="64" width="320" height="739"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="744"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
@@ -137,7 +150,9 @@
                             </tableViewCell>
                         </prototypes>
                     </tableView>
+                    <toolbarItems/>
                     <navigationItem key="navigationItem" title="Root View Controller" id="9uq-0t-JCf"/>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                 </tableViewController>
             </objects>
             <point key="canvasLocation" x="770" y="-868"/>
@@ -215,7 +230,14 @@
                             <toolbar clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="08g-uZ-3L3">
                                 <rect key="frame" x="0.0" y="0.0" width="768" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <items/>
+                                <items>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="azv-io-x25"/>
+                                    <barButtonItem systemItem="refresh" id="g6e-6k-VF6">
+                                        <connections>
+                                            <action selector="refreshView:" destination="qvM-Dl-5DT" id="dPu-a0-8l0"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
                             </toolbar>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" id="ynt-Bx-GwF">
                                 <rect key="frame" x="20" y="11" width="728" height="21"/>
