--- a/FlickrApp/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/FlickrApp/en.lproj/MainStoryboard_iPhone.storyboard
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="1.1" toolsVersion="2182" systemVersion="11D50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="4cn-pz-a0f">
     <dependencies>
-        <deployment defaultVersion="1296" identifier="iOS"/>
         <development defaultVersion="4200" identifier="xcode"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1181"/>
     </dependencies>
@@ -159,7 +158,7 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Location" id="8hl-bg-BcT">
-                        <barButtonItem key="rightBarButtonItem" title="Refresh" id="biM-tT-0sK">
+                        <barButtonItem key="rightBarButtonItem" systemItem="refresh" id="biM-tT-0sK">
                             <connections>
                                 <action selector="refresh:" destination="tdN-Qc-gKr" id="tny-28-Jup"/>
                             </connections>
@@ -252,7 +251,7 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" id="RLz-wl-7L5">
-                        <barButtonItem key="rightBarButtonItem" title="Refresh" id="xcx-KJ-VGo">
+                        <barButtonItem key="rightBarButtonItem" systemItem="refresh" id="xcx-KJ-VGo">
                             <connections>
                                 <action selector="refresh:" destination="zeu-ef-mxl" id="Lzq-av-C8v"/>
                             </connections>
@@ -268,33 +267,6 @@
             <point key="canvasLocation" x="596" y="323"/>
         </scene>
     </scenes>
-    <classes>
-        <class className="FlickrImageViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/FlickrImageViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="imageView" candidateClass="UIImageView"/>
-                <relationship kind="outlet" name="scrollView" candidateClass="UIScrollView"/>
-                <relationship kind="outlet" name="spinner" candidateClass="UIActivityIndicatorView"/>
-                <relationship kind="outlet" name="toolbar" candidateClass="UIToolbar"/>
-            </relationships>
-        </class>
-        <class className="PhotoListTableController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/PhotoListTableController.h"/>
-            <relationships>
-                <relationship kind="action" name="refresh:"/>
-                <relationship kind="outlet" name="refreshButton" candidateClass="UIBarButtonItem"/>
-            </relationships>
-        </class>
-        <class className="PhotosFromLocationTableViewController" superclassName="PhotoListTableController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/PhotosFromLocationTableViewController.h"/>
-        </class>
-        <class className="RecentPhotosTableViewController" superclassName="PhotoListTableController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/RecentPhotosTableViewController.h"/>
-        </class>
-        <class className="TopPlacesTableViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/TopPlacesTableViewController.h"/>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
