--- a/FlickrApp/en.lproj/MainStoryboard_iPad.storyboard
+++ b/FlickrApp/en.lproj/MainStoryboard_iPad.storyboard
@@ -6,11 +6,12 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1181"/>
     </dependencies>
     <scenes>
-        <!--Tab Bar Controller-->
+        <!--Tab Bar Controller - Item-->
         <scene sceneID="coY-tw-8vq">
             <objects>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eKD-5y-Gkp" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <tabBarController definesPresentationContext="YES" id="NdB-av-I7Y" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="12Z-bf-YEs"/>
                     <nil key="simulatedBottomBarMetrics"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" id="Srp-R0-eUW">
                         <rect key="frame" x="129" y="330" width="163" height="49"/>
@@ -18,7 +19,7 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="P4O-NW-Ja3" kind="relationship" relationship="viewControllers" id="4V7-yw-Tt4"/>
+                        <segue destination="P4O-NW-Ja3" kind="relationship" relationship="viewControllers" id="8AM-NT-scR"/>
                         <segue destination="1qA-x1-lgd" kind="relationship" relationship="viewControllers" id="O9R-NS-X2E"/>
                     </connections>
                 </tabBarController>
@@ -122,7 +123,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uSp-xJ-FNm" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <tableViewController id="GCX-qx-u4S" customClass="RecentPhotosTableViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="dS2-Tu-HkY">
-                        <rect key="frame" x="0.0" y="64" width="320" height="744"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="739"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
@@ -155,7 +156,6 @@
                     </tableView>
                     <toolbarItems/>
                     <navigationItem key="navigationItem" title="Root View Controller" id="9uq-0t-JCf"/>
-                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                 </tableViewController>
             </objects>
             <point key="canvasLocation" x="770" y="-868"/>
@@ -200,14 +200,14 @@
                     <toolbarItems/>
                     <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="blackTranslucent"/>
                     <connections>
-                        <segue destination="NdB-av-I7Y" kind="relationship" relationship="masterViewController" id="Hg2-ZN-QQ0"/>
                         <segue destination="qvM-Dl-5DT" kind="relationship" relationship="detailViewController" id="2MH-MV-1B1"/>
+                        <segue destination="NdB-av-I7Y" kind="relationship" relationship="masterViewController" id="0k4-TY-L2e"/>
                     </connections>
                 </splitViewController>
             </objects>
             <point key="canvasLocation" x="-1509" y="-808"/>
         </scene>
-        <!--Map View Controller-->
+        <!--Map View Controller - Item-->
         <scene sceneID="HlD-lK-vrx">
             <objects>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jHC-ck-XfH" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -223,12 +223,13 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="eaG-jt-ie5"/>
                     <connections>
                         <outlet property="mapView" destination="kxm-4N-UPF" id="jra-7M-bQQ"/>
                     </connections>
                 </viewController>
             </objects>
-            <point key="canvasLocation" x="1229" y="-669"/>
+            <point key="canvasLocation" x="-571" y="-2581"/>
         </scene>
         <!--Flickr Image View Controller-->
         <scene sceneID="6pK-rx-X0v">
